# bibpy

./: .gitignore  Makefile  README.md  merger.py  model.py  parser.py  pyproject.toml
scripts/: pub_date.r
src/bibpy/: __main__.py  analyser.py  merger.py  model.py  model2.py  parser.py
tests/: case_tests.py  test_next_entry.py  test_parse_entry.py
