[project]
name = "bibpy"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["rich==13.7.1"]

[project.optional-dependencies]
dev = ["ruff==0.4.10", "mypy==1.8.0", "pytest==7.4.4"]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["D203", "D213", "FA102"]
lint.extend-ignore = [
    # "D", "ANN", "FA100", "T201",  # temporario
    # "TD003", "FIX002",  # delete
]

[tool.mypy]
strict = true
show_error_codes = true
enable_error_code = "ignore-without-code"
exclude = ["build", ".venv"]
